First working version of docker-compose script with edits to dockerfile for support.